--- a/EnergyTrading.Logging.Serilog/packages.config
+++ b/EnergyTrading.Logging.Serilog/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Serilog" version="1.5.14" targetFramework="net452" />
+  <package id="SH.EnergyTrading.Contracts" version="1.0.0" targetFramework="net452" />
+  <package id="SH.EnergyTrading.Core" version="1.0.0" targetFramework="net452" />
 </packages>
