updated to have dependency on Sink for Seq

--- a/EnergyTrading.Logging.Serilog/EnergyTrading.Logging.Serilog.nuspec
+++ b/EnergyTrading.Logging.Serilog/EnergyTrading.Logging.Serilog.nuspec
@@ -17,6 +17,7 @@
                 <dependency id="SH.EnergyTrading.Contracts" />
                 <dependency id="SH.EnergyTrading.Core" />
                 <dependency id="serilog" />
+                <dependency id="serilog.sinks.seq" />
             </group>
         </dependencies>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
